Update token in Qiskit account saving code
Replaced sensitive token with placeholder 'xxxx'.

--- a/tsp/TSP_QAOA_IBM_Quantum_Configurado.ipynb
+++ b/tsp/TSP_QAOA_IBM_Quantum_Configurado.ipynb
@@ -124,7 +124,7 @@
     "# Salvar credenciais (execute apenas UMA VEZ, depois pode comentar)\n",
     "QiskitRuntimeService.save_account(\n",
     "    channel=\"ibm_cloud\",\n",
-    "    token=\"QjERV3-OEiLvi-aenZ1E5wq3QzWx4rRb91pz46-qYmgH\",\n",
+    "    token=\"xxxx\",\n",
     "    instance=\"ibm-q/open/main\",\n",
     "    overwrite=True\n",
     ")\n",
